--- a/DS PROJ.ipynb
+++ b/DS PROJ.ipynb
@@ -697,7 +697,11 @@
       "metadata": {
         "id": "kafJ38cUVzt8",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "9d70e2e2-a426-42d6-9b31-1c43a4523d90"
       },
       "cell_type": "code",
       "source": [
@@ -733,47 +737,64 @@
         "\n",
         "\n",
         "trn = combined_features.fit_transform(train)\n",
-        "trn['SK_ID_CURR'] = train_ids\n",
-        "trn = trn.merge(agg_prev_app, how  = 'left', on = 'SK_ID_CURR')\n",
+        "\n",
+        "tst = combined_features.transform(test)\n",
         "\n",
         "\n",
-        "tst = combined_features.fit_transform(test)\n",
-        "tst['SK_ID_CURR'] = test_ids\n",
-        "tst = tst.merge(agg_prev_app, how  = 'left', on = 'SK_ID_CURR')\n",
         "\n",
         "\n",
-        "trn.fillna(0, inplace = True)\n",
-        "tst.fillna(0, inplace = True)\n",
-        "\n",
-        "tst.drop(['SK_ID_CURR'], axis = 1, inplace = True)\n",
-        "trn.drop(['SK_ID_CURR'], axis = 1, inplace = True)\n"
+        "print(len(trn.columns))\n",
+        "print(len(tst.columns))"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "250\n",
+            "250\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
-        "id": "xUjb2KIR0itP",
+        "id": "Y5djg18L1PRh",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "90ca4f56-2039-43d2-e355-67d8d1584525"
+        "outputId": "bf2342ab-c85c-48c4-d804-303d783d2d37"
       },
       "cell_type": "code",
       "source": [
+        "trn['SK_ID_CURR'] = train_ids\n",
+        "trn = trn.merge(agg_prev_app, how  = 'left', on = 'SK_ID_CURR')\n",
+        "tst['SK_ID_CURR'] = test_ids\n",
+        "tst = tst.merge(agg_prev_app, how  = 'left', on = 'SK_ID_CURR')\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "tst.drop(['SK_ID_CURR'], axis = 1, inplace = True)\n",
+        "trn.drop(['SK_ID_CURR'], axis = 1, inplace = True)\n",
+        "\n",
+        "trn.fillna(0, inplace = True)\n",
+        "tst.fillna(0, inplace = True)\n",
+        "\n",
         "print(len(trn.columns))\n",
         "print(len(tst.columns))\n",
         "\n"
       ],
-      "execution_count": 24,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "471\n",
-            "468\n"
+            "471\n"
           ],
           "name": "stdout"
         }
@@ -785,9 +806,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 622
+          "height": 51
         },
-        "outputId": "2ba32690-8acb-4be4-e0c7-84c8bf0d3079"
+        "outputId": "3a719fd9-0b70-4a4e-c653-b100944eaa09"
       },
       "cell_type": "code",
       "source": [
@@ -802,10 +823,10 @@
         "sub.columns = ['SK_ID_CURR','TARGET']\n",
         "\n",
         "sub\n",
-        "#sub.to_csv('submission.csv', index = False)\n",
+        "sub.to_csv('submission.csv', index = False)\n",
         "\n"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -814,20 +835,6 @@
             "  FutureWarning)\n"
           ],
           "name": "stderr"
-        },
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-15-d68d536c1890>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mpred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict_proba\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtst\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0msub\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_ids\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0msub\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'TARGET'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpred\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py\u001b[0m in \u001b[0;36mpredict_proba\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m   1409\u001b[0m                                                 self.solver == 'liblinear')))\n\u001b[1;32m   1410\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0movr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1411\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mLogisticRegression\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_predict_proba_lr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1412\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1413\u001b[0m             \u001b[0mdecision\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecision_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/base.py\u001b[0m in \u001b[0;36m_predict_proba_lr\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    293\u001b[0m         \u001b[0mmulticlass\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mhandled\u001b[0m \u001b[0mby\u001b[0m \u001b[0mnormalizing\u001b[0m \u001b[0mthat\u001b[0m \u001b[0mover\u001b[0m \u001b[0mall\u001b[0m \u001b[0mclasses\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    294\u001b[0m         \"\"\"\n\u001b[0;32m--> 295\u001b[0;31m         \u001b[0mprob\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecision_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    296\u001b[0m         \u001b[0mprob\u001b[0m \u001b[0;34m*=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    297\u001b[0m         \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprob\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprob\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/base.py\u001b[0m in \u001b[0;36mdecision_function\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    260\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mn_features\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    261\u001b[0m             raise ValueError(\"X has %d features per sample; expecting %d\"\n\u001b[0;32m--> 262\u001b[0;31m                              % (X.shape[1], n_features))\n\u001b[0m\u001b[1;32m    263\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    264\u001b[0m         scores = safe_sparse_dot(X, self.coef_.T,\n",
-            "\u001b[0;31mValueError\u001b[0m: X has 469 features per sample; expecting 472"
-          ]
         }
       ]
     },
