--- a/DS PROJ.ipynb
+++ b/DS PROJ.ipynb
@@ -6,13 +6,14 @@
       "name": "DS PROJ.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    }
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -47,6 +48,7 @@
         "from sklearn.impute import SimpleImputer\n",
         "from sklearn.base import TransformerMixin\n",
         "from sklearn.externals.joblib import Parallel, delayed\n",
+        "from sklearn.model_selection import train_test_split\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from scipy import sparse\n",
         "import numpy as np\n",
@@ -61,11 +63,11 @@
       "metadata": {
         "id": "GakPWTW00TCZ",
         "colab_type": "code",
+        "outputId": "dbaaf0c2-1394-4c8a-bf75-0d106a51f688",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "57316d6e-1c5d-4e13-8846-b221e28a66c4"
+          "height": 122
+        }
       },
       "cell_type": "code",
       "source": [
@@ -77,11 +79,36 @@
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "metadata": {
+        "id": "oii2S8FS7Rmd",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "def Setupkaggle():\n",
+        "  #Kaggle Setup for Google Drive\n",
+        "  !mkdir .kaggle\n",
+        "  with open(r'/content/drive/My Drive/kaggle.json') as file:\n",
+        "    data = json.load(file)\n",
+        "  with open('/content/.kaggle/kaggle.json', 'w') as file:\n",
+        "      json.dump(data, file)\n",
+        "  !chmod 600 /content/.kaggle/kaggle.json\n",
+        "  !cp /content/.kaggle/kaggle.json ~/.kaggle/kaggle.json"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -358,11 +385,11 @@
         },
         "id": "sCAwZxnt0Ixa",
         "colab_type": "code",
+        "outputId": "c4851428-7663-4053-dd1d-650a91732091",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 335
-        },
-        "outputId": "a4dcdbda-b049-4003-e92d-656622c0f344"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -389,7 +416,7 @@
         "agg_prev_app['SK_ID_CURR'] = agg_prev_app.index\n",
         "agg_prev_app.head()"
       ],
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -689,7 +716,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 10
         }
       ]
     },
@@ -697,11 +724,11 @@
       "metadata": {
         "id": "kafJ38cUVzt8",
         "colab_type": "code",
+        "outputId": "e14a59c7-aba1-4558-99d3-ed6898e024a4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "9d70e2e2-a426-42d6-9b31-1c43a4523d90"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -746,7 +773,7 @@
         "print(len(trn.columns))\n",
         "print(len(tst.columns))"
       ],
-      "execution_count": 31,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -762,11 +789,11 @@
       "metadata": {
         "id": "Y5djg18L1PRh",
         "colab_type": "code",
+        "outputId": "bc18921e-fcc6-4811-b29f-aa1e1721a424",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "bf2342ab-c85c-48c4-d804-303d783d2d37"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -788,7 +815,7 @@
         "print(len(tst.columns))\n",
         "\n"
       ],
-      "execution_count": 32,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -804,11 +831,11 @@
       "metadata": {
         "id": "ZaeuMNL70OHX",
         "colab_type": "code",
+        "outputId": "3a719fd9-0b70-4a4e-c653-b100944eaa09",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "3a719fd9-0b70-4a4e-c653-b100944eaa09"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -826,7 +853,7 @@
         "sub.to_csv('submission.csv', index = False)\n",
         "\n"
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -842,18 +869,94 @@
       "metadata": {
         "id": "0xIl2k-SYai_",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 153
+        },
+        "outputId": "e7a9b74a-73f3-49f4-d213-674cd884234a"
+      },
+      "cell_type": "code",
+      "source": [
+        "#loss  = categorical_crossentropy,binary_crossentropy\n",
+        "#optimizer = rmsprop, sgd, adam, \n",
+        "#activation = softmax, relu , sigmoid\n",
+        "import tensorflow as tf\n",
+        "from keras.callbacks import EarlyStopping\n",
+        "model = tf.keras.models.Sequential([\n",
+        "    tf.keras.layers.Dense(64,  activation='relu')\n",
+        "    ,tf.keras.layers.Dropout(.50)\n",
+        "    ,tf.keras.layers.Dense(32,  activation='relu')\n",
+        "    ,tf.keras.layers.Dropout(.20)\n",
+        "    ,tf.keras.layers.Dense(16,  activation='relu')\n",
+        "    ,tf.keras.layers.Dropout(.20)\n",
+        "    ,tf.keras.layers.Dense(1,  activation='sigmoid')\n",
+        "])\n",
+        "\n",
+        "model.compile(optimizer='adam',\n",
+        "loss='binary_crossentropy',\n",
+        "metrics=['accuracy'])\n",
+        "\n",
+        "X_train, X_val, Y_train, Y_val = train_test_split(trn, Y, test_size=0.33, random_state=42,stratify=Y)\n",
+        "es = EarlyStopping(monitor='val_loss', mode='min', verbose=1, patience=50)\n",
+        "model.fit(np.array(X_train) ,np.array(Y_train), batch_size=1000, epochs=3,validation_data=(np.array(X_val), np.array(Y_val)))\n",
+        "\n",
+        "pred= model.predict(tst)\n",
+        "sub = pd.DataFrame(test_ids)\n",
+        "sub['TARGET'] = pred\n",
+        "sub.columns = ['SK_ID_CURR','TARGET']\n",
+        "sub.to_csv('submission.csv', index = False)\n",
+        "\n",
+        "\n"
+      ],
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Train on 206032 samples, validate on 101479 samples\n",
+            "Epoch 1/3\n",
+            "206032/206032 [==============================] - 7s 35us/sample - loss: 0.3222 - acc: 0.8994 - val_loss: 0.2606 - val_acc: 0.9193\n",
+            "Epoch 2/3\n",
+            "206032/206032 [==============================] - 7s 33us/sample - loss: 0.2740 - acc: 0.9192 - val_loss: 0.2574 - val_acc: 0.9193\n",
+            "Epoch 3/3\n",
+            "206032/206032 [==============================] - 7s 33us/sample - loss: 0.2673 - acc: 0.9192 - val_loss: 0.2545 - val_acc: 0.9193\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tensorflow.python.keras.callbacks.History at 0x7f81d43b2f98>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 73
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "jpF7a2GFaexx",
+        "colab_type": "code",
         "colab": {}
       },
       "cell_type": "code",
       "source": [
-        ""
+        "#Kaggle Setup (make sure kaggle.json is in your google drive home dir)\n",
+        "#!pip install kaggle\n",
+        "#Setupkaggle():\n",
+        "#!kaggle competitions submit -c home-credit-default-risk -f submission.csv -m \"Message\"\n",
+        "#!kaggle competitions files home-credit-default-risk"
       ],
       "execution_count": 0,
       "outputs": []
     },
     {
       "metadata": {
-        "id": "SmI8ihmixzv8",
+        "id": "z9NWLL1m5xJP",
         "colab_type": "code",
         "colab": {}
       },
